added orange accent

--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
 <body>
   <header>
     <div id="banner" tabindex="-1"
-      class="relative z-50 flex justify-center w-full px-4 py-3 border border-b border-gray-200 bg-gray-50 lg:py-4 dark:bg-gray-700">
+      class="relative z-50 flex justify-center align-baseline w-full px-4 py-3 border border-b bg-orange-500 lg:py-4 dark:bg-gray-700">
       <div class="items-center md:flex ml-auto">
-        <p class="text-sm font-medium text-gray-900 md:my-0 dark:text-white">
+        <p class="text-sm font-medium text-white md:my-0">
           Clamp is deployed on the Polygon mainnet but still undergoing
           testing. There is a risk of losing your funds and cryptocurrency. To
           go back to Clamp's main page.
-          <a class="inline-flex items-center ml-1 text-sm font-medium text-blue-600 dark:text-blue-500 hover:underline"
-            href="/">Click here
+          <a class="ml-1 underline pt-1 text-sm font-medium text-white hover:no-underline" href="/">Click here
           </a>
         </p>
       </div>
       <button data-collapse-toggle="banner" type="button"
-        class="ml-auto flex items-center text-gray-400 hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-0.5 dark:hover:bg-gray-600 dark:hover:text-white">
+        class="ml-auto flex items-center text-white rounded-lg text-sm p-0.5 dark:hover:bg-gray-600 dark:hover:text-white">
         <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd"
             d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
@@ -40,7 +39,7 @@
         </a>
         <div class="flex md:order-2">
           <button type="button"
-            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            class=" text-white bg-neutral-900 hover:bg-neutral-800 focus:ring-4 focus:outline-none focus:ring-neutral-300 rounded-md font-semibold text-sm px-4 py-3.5 text-center mr-3 md:mr-">
             Connect Wallet
           </button>
           <button data-collapse-toggle="navbar-sticky" type="button"
@@ -78,22 +77,22 @@
     </nav>
 
     <section class="w-full flex flex-col justify-center">
-      <h1 class="text-5xl font-bold mt-16 mx-auto">
+      <h1 class="text-5xl font-bold mt-16 mx-auto font-sans">
         Buy crypto index anytime, anywhere.
       </h1>
 
       <form class="flex items-center mt-10 mx-auto w-[35vw]">
         <div class="relative z-0 w-full">
           <input type="email" name="floating_search" id="floating_search"
-            class="block py-3.5 px-2 w-full text-base text-gray-900 bg-transparent border-2 border-solid rounded-md border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
-            placeholder=" " required />
+            class="block py-3.5 px-2 w-full text-base text-gray-900 bg-transparent border-2 border-solid rounded-md border-[#E4DFDD] focus:border-[#584C46] appearance-none focus:outline-none focus:ring-0 peer"
+            placeholder=" " />
           <label for="floating_search"
-            class="px-1 py-1.5 ml-2 bg-white peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-7 scale-90 top-3 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-90 peer-focus:-translate-y-7">Email
-            address</label>
+            class="px-1 py-1.5 ml-2 bg-white peer-focus:font-medium absolute text-sm text-neutral-400 duration-300 transform -translate-y-7 scale-90 top-3 origin-[0] peer-focus:left-0 peer-focus:text-orange-600  peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-90 peer-focus:-translate-y-7">
+            Crypto Exchange ?</label>
         </div>
         <label for="voice-search" class="sr-only">Search</label>
         <button type="submit"
-          class="inline-flex items-center py-3.5 px-3 ml-2 text-sm font-medium text-white bg-blue-700 border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+          class="inline-flex items-center py-[1.125rem] rounded-md px-4 ml-2 text-sm font-medium text-white bg-orange-500  hover:bg-orange-600 focus:ring-4 focus:outline-none focus:ring-orange-300">
           <svg aria-hidden="true" class="mr-2 -ml-1 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
             xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
